--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.1",
+    "@types/nodemailer": "^6.4.4",
+    "eslint": "^8.19.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -20,6 +22,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.6",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41"
   }
